--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,7 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
 }
+
+.button button{
+    background-color: white;
+}
