hopefully final contact

--- a/css/style.css
+++ b/css/style.css
@@ -434,8 +434,20 @@ button,
 .button {
     background-color: #5a5a5a;
     color: #ffffff !important;
+    padding: 30;
+
 }
 
+.money {
+    background-color: white;
+    color: white;
+    padding: 3px;
+    border-radius: 5%;   
+}
+
+.money button, .submit button {
+    border-radius: 10px;
+}
     input[type="submit"]:hover,
     input[type="reset"]:hover,
     input[type="button"]:hover,
@@ -742,7 +754,7 @@ input[type="email"],
 select,
 textarea {
     background: none;
-    border-color: #fceced;
+    border-color: #5a5a5a3f;
 }
 
     input[type="text"]:focus,
@@ -874,11 +886,6 @@ ul {
     padding-left: 1em;
 }
 
-<<<<<<< HEAD
-.button button{
-    background-color: white;
-}
-=======
     ul li {
         padding-left: 0.5em;
     }
@@ -1012,7 +1019,7 @@ section.special, article.special {
 section .inner {
     max-width: 65em;
     width: calc(100% - 6em);
-    margin: 0 auto;
+    margin: 15px auto 0;
 }
 
     @media screen and (max-width: 480px) {
@@ -1850,4 +1857,3 @@ body {
         }
 
     }
->>>>>>> ccc290151b4245a2fac86356d0cb14081681be16
