--- a/css/style.css
+++ b/css/style.css
@@ -1332,7 +1332,7 @@ body {
     color: #f2a3a5;
     padding: 13em 0 11em 0;
     background-color: #0c0c0c;
-    background-image: url("../../images/highrezzy.jpg");
+    background-image: url("../images/newwaterback.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 15% left;
